# vnote

./: .env.example  .gitignore  LICENSE  PHASE0.md  PHASE1.md  PHASE2.md  PHASE4.md  PHASE5.md  PHASE6.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
docs/: USER_GUIDE.md
docs/planning/: PHASE2.md  PHASE3.md  PHASE7.md
docs/superpowers/plans/: 2026-07-06-flow-history.md  2026-07-06-promote-take.md
scripts/: install-windows-client.ps1  vnote-daemon.service
tests/: test_actions.py  test_cleanup.py  test_cli.py  test_commands.py  test_config.py  test_daemon.py  test_doctor.py  test_firstrun.py  test_flow.py  test_history.py  test_output.py  test_scripts.py  test_server.py  test_tray.py  test_vad.py  test_vocab.py
vnote/: __init__.py  audio.py  cleanup.py  cli.py  commands.py  config.py  daemon.py  doctor.py  firstrun.py  history.py  output.py  record.py  server.py  transcribe.py  vad.py  vocab.py
vnote/client/: __init__.py  app.py  capture.py  hotkey.py  inject.py  tray.py  window.py
