[project]
name = "vnote"
version = "0.4.0"
description = "Local voice notes: record -> faster-whisper transcription -> LLM cleanup, straight to your clipboard"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Scott Greenwood" }]
keywords = ["whisper", "transcription", "dictation", "voice-notes", "ollama", "wsl", "cli"]
dependencies = [
    "faster-whisper>=1.1.0",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "numpy>=1.24",
    # CUDA runtime libs that CTranslate2 (faster-whisper's backend) needs on the
    # GPU path. Linux + Windows have CUDA wheels; macOS has no CUDA, so we skip
    # them there and transcribe.py falls back to CPU automatically.
    "nvidia-cublas-cu12; platform_system != 'Darwin'",
    "nvidia-cudnn-cu12>=9; platform_system != 'Darwin'",
]

[project.optional-dependencies]
# Optional Claude cleanup backend (`vnote --backend claude`). Needs ANTHROPIC_API_KEY.
claude = ["anthropic>=0.40"]
# Flow-mode client (`vnote-flow`): global hotkey + keystroke injection + tray icon.
# Install on the machine that owns the keyboard (on WSL setups: Windows Python).
flow = ["pynput>=1.7", "pystray>=0.19", "pillow>=10"]
# Dev tooling (tests + lint).
dev = ["pytest>=8", "ruff>=0.6"]

[project.urls]
Homepage = "https://github.com/greenwoodms06/vnote"
Repository = "https://github.com/greenwoodms06/vnote"
Issues = "https://github.com/greenwoodms06/vnote/issues"

[project.scripts]
vnote = "vnote.cli:main"
vnote-flow = "vnote.client.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vnote"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
# pyflakes, pycodestyle, isort, bugbear, pyupgrade, comprehensions.
select = ["F", "E", "W", "I", "B", "UP", "C4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Put the repo root on sys.path so tests import `vnote` straight from source —
# no package install needed, which keeps CI from pulling the heavy runtime deps.
pythonpath = ["."]
